# orx_simple_sample

./: .gitignore  CMakeLists.txt  README.md  orx_build_debug_libs.md  orx_button_click_setup.md  orx_enable_logging_guide.md  orx_image_not_showing_debug_guide.md  orx_logging_and_button_fix.md  orx_minimal_window_setup.md  分かったこと.md
data/: config.ini  object.ini
src/: main.c
